--- a/Tutorial-6-LMS.ipynb
+++ b/Tutorial-6-LMS.ipynb
@@ -100420,9 +100420,9 @@
     "for i in range(N_epochs):\n",
     "   for j in range(N):\n",
     "       error_j=d[j]-np.matmul(X[j,:],w) # we calculate error for j input\n",
-    "       #print(error_j)\n",
+    "       # print(error_j)\n",
     "       w = w + np.asmatrix(error_j[0] * X[j,:].T * eta).T # update w\n",
-    "       print(w)\n",
+    "       # print(w)\n",
     "\n",
     " \n",
     "   error_epoch[i+1][0]= np.matmul((np.matmul(X,w)-d).T,(np.matmul(X,w)-d))\n",
